[tool.poetry]
name = "traffic-signs-adversarial-attacks"
version = "0.1.0"
description = "Advanced Security Project 2025, UNIGE"
authors = ["Denis Fedosov <dfedosov@pictet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
matplotlib = "^3.10.1"
pillow = "^11.2.1"
torch = "^2.7.0"
datasets = "^3.6.0"
scikit-learn = "^1.6.1"
torchvision = "^0.22.0"
pytorch-lightning = "^2.5.1.post0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
